unpackaged/main/default/objects/API_Connector__Input_Setting__c/API_Connector__Input_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Input Setting</label>
</CustomObject>