unpackaged/main/default/objects/API_Connector__Input_Setting__c/fields/API_Connector__candidateMaximumQuantity__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__candidateMaximumQuantity__c</fullName>
    <label>Candidate Maximum Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>