unpackaged/main/default/objects/API_Connector__Input_Setting__c/fields/API_Connector__confidenceLowerLevelThresholdValue__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__confidenceLowerLevelThresholdValue__c</fullName>
    <label>Confidence Lower Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>