unpackaged/main/default/objects/API_Connector__Input_Setting__c/fields/API_Connector__exclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__exclusionCriteria__c</fullName>
    <label>Excluding entities</label>
    <type>TextArea</type>
</CustomField>